// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 77471e0f68dc3a2c9ff75d2f38bde768441c738104cc1fbbb380f17b528d4fe7 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the check-out date],
    "hash": "77471e0f68dc3a2c9ff75d2f38bde768441c738104cc1fbbb380f17b528d4fe7",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ALL_WITH_EXAMPLES' > hash = 11ebe5a378531c8afa209703ca5882ca45521fc05b699c12308db1bfd5936786 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "11ebe5a378531c8afa209703ca5882ca45521fc05b699c12308db1bfd5936786",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = f34085d35f99e12f2c55f18b895b03f1ec5b0b20ce2b0431d24ee47926fc9bd9 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "f34085d35f99e12f2c55f18b895b03f1ec5b0b20ce2b0431d24ee47926fc9bd9",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ADMIN' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 2b2ff7f8c429507fe78130ed476e13ad074c6df1771daf232850aa910f743454 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "admin",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "ADMIN",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: From when ? must be filled],
    "hash": "2b2ff7f8c429507fe78130ed476e13ad074c6df1771daf232850aa910f743454",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 76d58732b09f928d5f4bd9e0d0882707e7417d33010d2d83e6e665d9156db34a 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the check-out date],
    "hash": "76d58732b09f928d5f4bd9e0d0882707e7417d33010d2d83e6e665d9156db34a",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ALL_WITH_EXAMPLES' > hash = dedbfd53c94edc2b248729674261c5ab932d99866508d739a5eae129a69f3f8c 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "dedbfd53c94edc2b248729674261c5ab932d99866508d739a5eae129a69f3f8c",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = 225bc1c3be445a83631d6ca1932a889137f402cb864963ca0e58b42dbbf96ee0 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "225bc1c3be445a83631d6ca1932a889137f402cb864963ca0e58b42dbbf96ee0",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'ANONYMOUS' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 9d738e74b85be6abc55fdfea30933cc89318cd7a41eb993d2a3d70e81874cd0f 1`] = `
{
  "out": {
    "args": {
      "auth": null,
      "authName": "ANONYMOUS",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: From when ? must be filled],
    "hash": "9d738e74b85be6abc55fdfea30933cc89318cd7a41eb993d2a3d70e81874cd0f",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_CORRECT_BUT_TO_BEFORE_FROM' > hash = 1e8b5b95a5e1e33b19c740978823f9b41992ac7d8de89058ef29879ea0e45937 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_CORRECT_BUT_TO_BEFORE_FROM",
    },
    "err": [IllegalArgumentError: The check-in date must be before the check-out date],
    "hash": "1e8b5b95a5e1e33b19c740978823f9b41992ac7d8de89058ef29879ea0e45937",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-12",
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ALL_WITH_EXAMPLES' > hash = 6a615c872706cc806a46c1857953eb5ba6b6edbb14cb85fd0933284c74027e24 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ALL_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "6a615c872706cc806a46c1857953eb5ba6b6edbb14cb85fd0933284c74027e24",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_MANDATORY_WITH_EXAMPLES' > hash = b8017f017632e5ec9b99d134a52cc880f1df11566552c94fc32c76d071916478 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_MANDATORY_WITH_EXAMPLES",
    },
    "err": null,
    "hash": "b8017f017632e5ec9b99d134a52cc880f1df11566552c94fc32c76d071916478",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": "2022-07-14",
        "roomsCount": 1,
        "to": "2022-07-20",
      },
      "o": {
        "parts": {
          "_0": {
            "items": [
              {
                "id": "356a192b-7913-404c-9457-4d18c28d46e6",
                "name": "Normandy Deauville",
                "price": 15000,
                "rate": 9.8,
                "title": "La Suite Présidentielle",
              },
            ],
            "total": 1,
          },
        },
      },
    },
  },
  "sideEffects": undefined,
}
`;

exports[`Run > Use Cases > 'SearchAccomodation' > should execute with auth 'REGULAR' and input 'ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPL…' > hash = 15515516b2f5ec986358def93fc04bbb753393474f963a5e2249c25d2b27bf6f 1`] = `
{
  "out": {
    "args": {
      "auth": {
        "organization": {
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
        },
        "role": "regular",
        "user": {
          "firstname": "Dexter",
          "id": "dd9670e7-1dd5-4155-85c2-335714799ff7",
          "initials": "DM",
        },
      },
      "authName": "REGULAR",
      "inputFiller": [Function],
      "inputFillerName": "ONLY_SET_PROGRAMMATICALLY_WITH_EXAMPLES",
    },
    "err": [IllegalArgumentError: From when ? must be filled],
    "hash": "15515516b2f5ec986358def93fc04bbb753393474f963a5e2249c25d2b27bf6f",
    "io": {
      "i": {
        "adultsCount": 2,
        "childrenCount": 0,
        "country": "FR",
        "from": undefined,
        "roomsCount": 1,
        "to": undefined,
      },
      "o": null,
    },
  },
  "sideEffects": undefined,
}
`;
